update spark load-ft-qos

--- a/PROD/CONF/MVAS/load-spark-ft-qos-special-number.conf
+++ b/PROD/CONF/MVAS/load-spark-ft-qos-special-number.conf
@@ -44,10 +44,11 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS GET_INTERVAL_TIME"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS GET_INTERVAL_TIME"
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 flux.inline.exec-queries += "create temporary function GET_INTERVAL_TIME as 'cm.orange.bigdata.udf.GetIntervalTime'"
+
 flux.exec-queries += "/PROD/SCRIPTS/FT/MVAS/compute_and_insert_into_spark_ft_qos_smsc_special_number.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+
 
