--- a/PROD/CONF/MVAS/load-spark-ft-smsc-transaction-a2p.conf
+++ b/PROD/CONF/MVAS/load-spark-ft-smsc-transaction-a2p.conf
@@ -45,9 +45,9 @@ flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_FORMAT_MSISDN_TO_9DIGITS"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_GET_NNP_MSISDN_9_DIGITS"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_FORMAT_MSISDN_TO_9DIGITS"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_GET_NNP_MSISDN_9_DIGITS"
 flux.inline.exec-queries += "create temporary function FN_FORMAT_MSISDN_TO_9DIGITS as 'cm.orange.bigdata.udf.FormatMsisdnTo9Digits'"
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_9_DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
