--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -99,19 +99,19 @@ crontasks +=
 //  }
 
 // Chargement FT IN ZTE DATA_TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_FT_DATA_TRANSFER",
-    cron = "0 5 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "45 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_DATA_TRANSFER",
+//    cron = "0 5 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "45 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement FT IN ZTE CREDIT_TRANSFER
@@ -358,19 +358,19 @@ crontasks +=
 
 
  // Chargement FT_A IN ZTE DATA_TRANSFER
- crontasks +=
-   {
-     instanceId = "LOAD_FT_A_DATA_TRANSFER",
-     cron = "0 20/20 * * * ?",
-     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf",
-     taskType = "HIVE"
-     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-     timeout = "50 minutes"
-     extraTaskParams : [
-       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-     ]
-  }
+// crontasks +=
+//   {
+//     instanceId = "LOAD_FT_A_DATA_TRANSFER",
+//     cron = "0 20/20 * * * ?",
+//     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf",
+//     taskType = "HIVE"
+//     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//     timeout = "50 minutes"
+//     extraTaskParams : [
+//       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//     ]
+//  }
 
 
 // Chargement FT IN ZTE CREDIT_TRANSFER
@@ -518,19 +518,19 @@ crontasks +=
 //  }
 
 // Chargement FT IN ZTE RECHARGE
-crontasks +=
-  {
-    instanceId = "LOAD_FT_RECHARGE",
-    cron = "0 30 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-recharge.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_RECHARGE",
+//    cron = "0 30 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-recharge.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
