migrate RECHARGE,BALANCE_RESET,TRANSFER to batch

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -115,19 +115,19 @@ crontasks +=
 
 
 // Chargement FT IN ZTE CREDIT_TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CREDIT_TRANSFER",
-    cron = "0 6 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CREDIT_TRANSFER",
+//    cron = "0 6 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement FT IN ZTE OVERDRAFT
 crontasks +=
@@ -374,19 +374,19 @@ crontasks +=
 
 
 // Chargement FT IN ZTE CREDIT_TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_CREDIT_TRANSFER",
-    cron = "0 21/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-credit-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_CREDIT_TRANSFER",
+//    cron = "0 21/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-credit-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // LOAD_KPI_FT_GSM_TRAFFIC_REVENUE_DAILY
