update conf de  spark collect

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -84,7 +84,7 @@ cronmanagerId = "002"
 
 
 // Chargement FT IN ZTE EMERGENCY DATA
-crontasks +=
+//crontasks +=
 //  {
 //    instanceId = "LOAD_FT_EMERGENCY_DATA",
 //    cron = "0 4 */1 * * ?",
