--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-emergency-credit-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-emergency-credit-activity.conf
@@ -13,8 +13,7 @@ flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "no
 
 flux.spark.setup-var +=  {"key": "cdr_type","value": "ZTE_ED_CDR"}
 flux.spark.setup-var +=  {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_EMERGENCY_DATA"}
-flux.spark.setup-var +=  {"key": "it_partition_column","value": "TRANSACTION_DATE"}
-flux.spark.setup-var +=  {"key": "date_offset","value": 3}
+flux.spark.setup-var +=  {"key": "it_partition_column","value": "FILE_DATE"}
 flux.spark.setup-var +=  {"key": "flux_type","value": "PREPAID"}
 flux.spark.setup-var +=  {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
 
