--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-recharge.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-recharge.conf
@@ -8,18 +8,9 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
 flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
 
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_RECHARGE"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_RECHARGE"}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "TRANSACTION_DATE"}
-
-
 flux.spark.setup-conf += {"key": "cdr_type", "value": "ZTE_RECHARGE_CDR"}
 flux.spark.setup-conf += {"key": "it_table_name", "value": "CDR.IT_ZTE_RECHARGE"}
-flux.spark.setup-conf += {"key": "it_partition_column", "value": "PAY_DATE"}
+flux.spark.setup-conf += {"key": "it_partition_column", "value": "FILE_DATE"}
 flux.spark.setup-conf += {"key": "date_offset", "value": "7"}
 flux.spark.setup-conf += {"key": "flux_type", "value": "PREPAID"}
 flux.spark.setup-conf += {"key": "check_file_regex", "value": "IN_ZTE_CHECK_FILELIST_2"}
