--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-recharge.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-recharge.conf
@@ -9,7 +9,7 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
 
 flux.spark.setup-conf += {"key": "cdr_type", "value": "ZTE_RECHARGE_CDR"}
-flux.spark.setup-conf += {"key": "it_table_name", "value": "CDR.IT_ZTE_RECHARGE"}
+flux.spark.setup-conf += {"key": "it_table_name", "value": "CDR.SPARK_IT_ZTE_RECHARGE"}
 flux.spark.setup-conf += {"key": "it_partition_column", "value": "FILE_DATE"}
 flux.spark.setup-conf += {"key": "date_offset", "value": "7"}
 flux.spark.setup-conf += {"key": "flux_type", "value": "PREPAID"}
