--- a/PROD/CONF/IN_ZTE/IT/load-spark-it-data.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-spark-it-data.conf
@@ -12,6 +12,7 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-var +=  {"key": "date_offset","value": 3}
 
 flux.name = "LOAD_SPARK_IT_DATA"
 
@@ -40,6 +41,3 @@ flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/DATA/insert_into_spark_it_zte_data.hql"
-
-
-flux.hive.extra-conf += "--hivevar date_offset=3"
