--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -150,49 +150,49 @@ crontasks +=
 ////--###**************************************#####---
 
 // CALCUL FT_EDR_PRPD_EQT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_EDR_PRPD_EQT",
-    cron = "0 8 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_EDR_PRPD_EQT",
+//    cron = "0 8 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+ //   ]
+//  }
 
 // CALCUL FT_A_EDR_PRPD_EQT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_EDR_PRPD_EQT",
-    cron = "0 9 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-a-edr-prpd-eqt.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_EDR_PRPD_EQT",
+ //   cron = "0 9 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-a-edr-prpd-eqt.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+/ /     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // CALCUL FT_PRPD_EQT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_PRPD_EQT",
-    cron = "0 10 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-prpd-eqt.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_PRPD_EQT",
+//    cron = "0 10 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-prpd-eqt.conf",
+//    taskType = "HIVE"
+ //   taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // FT A MVAS
