switch all cbm from hive to sparck table

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -64,66 +64,66 @@ cronmanagerId = "008"
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CBM_CUST_INSIGTH_DAILY",
-    cron = "0 6 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-cust-insigth-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CBM_CUST_INSIGTH_DAILY",
+//    cron = "0 6 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-cust-insigth-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_VOICE_SMS_DA_USAGE_DAILY",
-    cron = "0 8 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_TEST_DA_USAGE_DAILY",
-    cron = "0 10 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_VOICE_SMS_DA_USAGE_DAILY",
+//    cron = "0 8 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CBM_DA_USAGE_DAILY",
-    cron = "0 12 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-cbm-da-usage-dally.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_TEST_DA_USAGE_DAILY",
+//    cron = "0 10 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+
+
+
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CBM_DA_USAGE_DAILY",
+//    cron = "0 12 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-cbm-da-usage-dally.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
@@ -246,19 +246,19 @@ crontasks +=
 
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CBM_CHURN_DAILY",
-    cron = "0 26 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-churn-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CBM_CHURN_DAILY",
+//    cron = "0 26 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-churn-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 crontasks +=
   {
@@ -275,19 +275,19 @@ crontasks +=
   }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CLIENT_SITE_TRAFFIC_DAY",
-    cron = "0 32 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-site-traffic-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CLIENT_SITE_TRAFFIC_DAY",
+//    cron = "0 32 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-site-traffic-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 crontasks +=
@@ -375,19 +375,19 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CLIENT_LAST_SITE_DAY",
-    cron = "0 46 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-last-site-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CLIENT_LAST_SITE_DAY",
+//    cron = "0 46 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-last-site-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 crontasks +=
   {
