--- a/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
@@ -32,7 +32,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1700, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM AGG.FT_X_INTERCO_FINAL WHERE SDATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.SPARK_FT_X_INTERCO_FINAL WHERE SDATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
