Integration de la collecte recurring in zte cdr; modification du script de call ft_client_site_traffic pour calcul avec table spark msc; modification de completude msc pour prise en compte des bons fichiers sources

--- a/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
@@ -40,7 +40,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT SRC,CRA_SRC,SDATE,HEURE,FAISCEAU,USAGE_APPEL,INDICATION_APPEL,TYPE_APPEL,TYPE_ABONNE,DESTINATION_APPEL,TYPE_HEURE,NBRE_APPEL,DUREE_APPEL,INSERTED_DATE,OPERATOR_CODE FROM AGG.FT_X_INTERCO_FINAL WHERE SDATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT SRC,CRA_SRC,SDATE,HEURE,FAISCEAU,USAGE_APPEL,INDICATION_APPEL,TYPE_APPEL,TYPE_ABONNE,DESTINATION_APPEL,TYPE_HEURE,NBRE_APPEL,DUREE_APPEL,INSERTED_DATE,OPERATOR_CODE FROM AGG.SPARK_FT_X_INTERCO_FINAL WHERE SDATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_X_INTERCO_FINAL"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_X_INTERCO_FINAL"
