--- a/PROD/CONF/FT_BALANCE_AGEE/load-ft-balance-agee.conf
+++ b/PROD/CONF/FT_BALANCE_AGEE/load-ft-balance-agee.conf
@@ -21,11 +21,12 @@ flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/prequery_FT_BALANCE_AGEE.hql"
 
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_BALANCE_AGEE"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_FT_BALANCE_AGEE.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_FT_BALANCE_AGEE_OTARIE.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_FT_BALANCE_AGEE_GPRS.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_FT_BALANCE_AGEE_MSC.hql"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TMP_CUST_CONTACT_ORDER"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_TMP_BALANCE_AGEE"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_BALANCE_AGEE"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_into_TMP_CUST_CONTACT_ORDER.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_into_TT_TMP_BALANCE_AGEE.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_into_TT_BALANCE_AGEE.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_FT_BALANCE_AGEE.hql"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_BALANCE_AGEE"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_BALANCE_AGEE"
