migrate to spark

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -230,19 +230,19 @@ crontasks +=
   }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CBM_BUNDLE_SUBS_DAILY",
-    cron = "0 24 */1 * * ?",
-    configFile = "/PROD/CONF/FT_CBM_BUNDLE_SUBS_DAILY/load-ft-cbm-bundle-subs-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CBM_BUNDLE_SUBS_DAILY",
+//    cron = "0 24 */1 * * ?",
+//    configFile = "/PROD/CONF/FT_CBM_BUNDLE_SUBS_DAILY/load-ft-cbm-bundle-subs-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
@@ -290,19 +290,19 @@ crontasks +=
 //  }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_EMERGENCY_CREDIT_ACTIVITY",
-    cron = "0 34 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-credit-activity.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_EMERGENCY_CREDIT_ACTIVITY",
+//    cron = "0 34 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-credit-activity.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 crontasks +=
   {
