--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -774,19 +774,19 @@ crontasks +=
 //--###        CALCULS MVAS
 //--###**************************************#####---
 // FT MVAS
-crontasks +=
-  {
-    instanceId = "LOAD_FT_SMSC_TRANSACTION_A2P",
-    cron = "0 43 */1 * * ?",
-    configFile = "/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_SMSC_TRANSACTION_A2P",
+//    cron = "0 43 */1 * * ?",
+//    configFile = "/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 //// CALCUL DES FICHIERS COMPUTE_FT_DAILY_STATUS
