--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms-post.conf
@@ -15,7 +15,7 @@ flux.spark.setup-var += {"key": "cdr_type","value": "ZTE_VOICE_SMS_POST_CDR"}
 flux.spark.setup-var += {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_VOICE_SMS_POST"}
 flux.spark.setup-var += {"key": "it_partition_column","value": "FILE_DATE"}
 flux.spark.setup-var += {"key": "flux_type","value": "POSTPAID"}
-flux.spark.setup-var += {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_POSTPAID_2"
+flux.spark.setup-var += {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_POSTPAID_2"}
 
 
 
