--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -277,20 +277,20 @@ crontasks +=
 
 
 
-// Chargement FT_A IN ZTE SUBCRIPTION
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_SUBSCRIPTION",
-    cron = "55 16/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscription.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//// Chargement FT_A IN ZTE SUBCRIPTION
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_SUBSCRIPTION",
+//    cron = "55 16/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscription.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement LOAD_FT_SUBSCRIPTION_MSISDN_DAY
 crontasks +=
