--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -505,134 +505,134 @@ cronmanagerId = "001"
 ////////////////////////////////////////////////////
 
 // Chargement de IT OM TRANSACTIONS
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OM_TRANSACTIONS",
-    cron = "30 */30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-om-transactions.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OM_TRANSACTIONS",
+//    cron = "30 */30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-om-transactions.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 // Chargement de IT OM APGL
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OM_APGL",
-    cron = "30 5-59/30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-om-apgl.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OM_APGL",
+//    cron = "30 5-59/30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-om-apgl.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 // Chargement de IT OM ALL BALANCE
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OM_ALL_BALANCE",
-    cron = "30 10-59/30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-om-all-balance.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OM_ALL_BALANCE",
+//    cron = "30 10-59/30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-om-all-balance.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 // Chargement de IT OM COMMISSIONS
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OM_COMMISSIONS",
-    cron = "30 15-59/30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-om-commissions.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OM_COMMISSIONS",
+//    cron = "30 15-59/30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-om-commissions.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 // Chargement de IT OM SERVICES CHARGES
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OMNY_SERVICES_CHARGES",
-    cron = "30 20-59/30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-om-services-charges.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OMNY_SERVICES_CHARGES",
+//    cron = "30 20-59/30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-om-services-charges.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 // Chargement de IT OM SUBSCRIBER
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OM_SUBSCRIBERS",
-    cron = "30 25-59/30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-om-subscribers.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OM_SUBSCRIBERS",
+//    cron = "30 25-59/30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-om-subscribers.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IT_OMNY_OPERATOR_BALANCE
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OMNY_OPERATOR_BALANCE",
-    cron = "30 5-49/30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-omny-operator-balance.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OMNY_OPERATOR_BALANCE",
+//    cron = "30 5-49/30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-omny-operator-balance.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IT_OMNY_ACCOUNT_SNAPSHOT pour la source CHANNEL EXTRACT
-crontasks +=
-  {
-    instanceId = "LOAD_IT_OMNY_ACCOUNT_SNAPSHOT_CHANNEL",
-    cron = "35 10-49/30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-omny-account-snapshot-channel.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_OMNY_ACCOUNT_SNAPSHOT_CHANNEL",
+//    cron = "35 10-49/30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-omny-account-snapshot-channel.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IT_OMNY_ACCOUNT_SNAPSHOT pour la source SUBSCRIBER EXTRACT
 crontasks +=
-  {
-    instanceId = "LOAD_IT_OMNY_ACCOUNT_SNAPSHOT_SUBSCRIBER",
-    cron = "35 10-49/30 * * * ?",
-    configFile = "/PROD/CONF/OM/load-it-omny-account-snapshot-subscribers.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "40 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//  {
+//    instanceId = "LOAD_IT_OMNY_ACCOUNT_SNAPSHOT_SUBSCRIBER",
+//    cron = "35 10-49/30 * * * ?",
+//    configFile = "/PROD/CONF/OM/load-it-omny-account-snapshot-subscribers.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "40 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement des logs Nifi
