--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -917,19 +917,19 @@ crontasks +=
   }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_OM_APGL_TRANSACTION",
-    cron = "0 52 */1 * * ?",
-    configFile = "/PROD/CONF/OM/load-ft-om-apgl-transaction.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_OM_APGL_TRANSACTION",
+//    cron = "0 52 */1 * * ?",
+//    configFile = "/PROD/CONF/OM/load-ft-om-apgl-transaction.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
@@ -952,48 +952,48 @@ crontasks +=
 
 
 
-  crontasks +=
-    {
-      instanceId = "LOAD_FT_OMNY_ACCOUNT_SNAPSHOT",
-      cron = "0 54 */1 * * ?",
-      configFile = "/PROD/CONF/OM/load-ft-omny-account-snapshot.conf",
-      taskType = "HIVE"
-      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-      timeout = "60 minutes"
-      extraTaskParams : [
-        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-      ]
-    }
+//  crontasks +=
+//    {
+//      instanceId = "LOAD_FT_OMNY_ACCOUNT_SNAPSHOT",
+//      cron = "0 54 */1 * * ?",
+//      configFile = "/PROD/CONF/OM/load-ft-omny-account-snapshot.conf",
+//      taskType = "HIVE"
+//      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//      timeout = "60 minutes"
+//      extraTaskParams : [
+//        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//      ]
+//    }
 
 
-crontasks +=
-    {
-      instanceId = "LOAD_FT_OMNY_BALANCE",
-      cron = "0 55 */1 * * ?",
-      configFile = "/PROD/CONF/OM/load-ft-omny-balance.conf",
-      taskType = "HIVE"
-      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-      timeout = "60 minutes"
-      extraTaskParams : [
-        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-      ]
-    }
+//crontasks +=
+//    {
+//      instanceId = "LOAD_FT_OMNY_BALANCE",
+//      cron = "0 55 */1 * * ?",
+//      configFile = "/PROD/CONF/OM/load-ft-omny-balance.conf",
+//      taskType = "HIVE"
+//      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//      timeout = "60 minutes"
+//      extraTaskParams : [
+//        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//      ]
+//    }
 
-crontasks +=
-{
-      instanceId = "LOAD_FT_OMNY_BALANCE_SNAPSHOT",
-      cron = "0 56 */1 * * ?",
-      configFile = "/PROD/CONF/OM/load-ft-omny-balance-snapshot.conf",
-      taskType = "HIVE"
-      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-      timeout = "60 minutes"
-      extraTaskParams : [
-        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-      ]
-    }
+//crontasks +=
+//{
+//      instanceId = "LOAD_FT_OMNY_BALANCE_SNAPSHOT",
+//      cron = "0 56 */1 * * ?",
+//      configFile = "/PROD/CONF/OM/load-ft-omny-balance-snapshot.conf",
+//      taskType = "HIVE"
+//      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//      timeout = "60 minutes"
+//      extraTaskParams : [
+//        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//      ]
+//    }
 
 
 
