Correction des fichiers de conf et scripts de calcul des ft et it du new cti

--- a/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti-count.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti-count.conf
@@ -40,4 +40,8 @@ flux.sqoop.export-rdms.dest-table = "CTI.FT_A_APPELS_CTI_COUNT"
 flux.sqoop.export-hive.staging-table = "SQ_FT_A_APPELS_CTI_COUNT"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
+//flux.sqoop.extra-params = []
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"
+
+//flux.hive.extra-conf = []
 
