--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -169,3 +169,35 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
+
+// // EXPORT sqoop-export-fta-appels-cti-count
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_A_APPELS_CTI_COUNT",
+    cron = "0 */10 * * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti-count.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+    ]
+  }
+
+// // EXPORT sqoop-export-fta-appels-cti
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_A_APPELS_CTI",
+    cron = "0 */10 * * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+    ]
+  }
