--- a/PROD/CONF/CTI/FT/load-spark-ft-a-appels-cti-count.conf
+++ b/PROD/CONF/CTI/FT/load-spark-ft-a-appels-cti-count.conf
@@ -5,6 +5,7 @@ flux.input-type = "HIVE"
 flux.output-type = "HIVE"
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "spark.sql.session.timeZone", "value": "WAT"}
 flux.spark.setup-var +=  {"key": "date_offset","value": "5"}
 flux.spark.setup-var +=  {"key": "table_type","value": "FTA"}
 flux.spark.setup-var +=  {"key": "table_name","value": "FT_A_APPELS_CTI_COUNT"}
@@ -35,7 +36,8 @@ flux.exec-query.execution.mode = "JDBC"
 
 flux.inline.exec-queries += "set  hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "set hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "set hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CTI/FT_A_APPELS_CTI/prequery_ft_a_appels_cti_count.hql"
 
