--- a/PROD/CONF/OM/load-spark-it-omny-Billing-Company.conf
+++ b/PROD/CONF/OM/load-spark-it-omny-Billing-Company.conf
@@ -14,22 +14,21 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
 
 flux.spark.setup-var +=  {"key": "date_offset","value": 3}
-flux.spark.setup-var +=  {"key": "cdr_type","value": "OMNY_Admin_Audit_Trail"}
+flux.spark.setup-var +=  {"key": "cdr_type","value": "OMNY_BILLING_COMPANY"}
 flux.spark.setup-var +=  {"key": "file_date_index","value": 12}
-flux.spark.setup-var +=  {"key": "tt_table_name","value": "CDR.TT_OMNY_ADMIN_AUDIT_TRAIL"}
+flux.spark.setup-var +=  {"key": "tt_table_name","value": "CDR.TT_OMNY_BILLING_COMPANY"}
 
-
-flux.name = "LOAD_SPARK_IT_OMNY_ADMIN_AUDIT_TRAIL"
+flux.name = "LOAD_SPARK_IT_OMNY_BILLING_COMPANY"
 
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "cAdminAuditTrail_*"
-flux.hdfs.dest-temp-tt-dir = "PROD/TT/OM/ADMINAUDITTRAIL/"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/OM/BILLINGCOMPANY/BillingCompany_*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/OM/BILLING_COMPANY/"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/OM/ADMINAUDITTRAIL/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/OM/ADMINAUDITTRAIL/"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/OM/BILLING_COMPANY/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/OM/BILLING_COMPANY/"
 flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
@@ -44,7 +43,7 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_spark_it_omny_Admin_Audit_Trail.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_spark_it_omny_Billing_Company.hql"
 
 
 
