--- a/PROD/CONF/OM/load-spark-it-omny-Reciever-Kyc.conf
+++ b/PROD/CONF/OM/load-spark-it-omny-Reciever-Kyc.conf
@@ -1,7 +1,5 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
-
-
 flux.input-type = "HIVE" // Possible values are HDFS, HIVE
 flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
 
@@ -14,22 +12,21 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
 
 flux.spark.setup-var +=  {"key": "date_offset","value": 3}
-flux.spark.setup-var +=  {"key": "cdr_type","value": "OMNY_Admin_Audit_Trail"}
+flux.spark.setup-var +=  {"key": "cdr_type","value": "OMNY_RECIEVER_KYC"}
 flux.spark.setup-var +=  {"key": "file_date_index","value": 12}
-flux.spark.setup-var +=  {"key": "tt_table_name","value": "CDR.TT_OMNY_ADMIN_AUDIT_TRAIL"}
+flux.spark.setup-var +=  {"key": "tt_table_name","value": "CDR.TT_OMNY_RECIEVER_KYC"}
 
-
-flux.name = "LOAD_SPARK_IT_OMNY_ADMIN_AUDIT_TRAIL"
+flux.name = "LOAD_SPARK_IT_OMNY_RECIEVER_KYC"
 
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "cAdminAuditTrail_*"
-flux.hdfs.dest-temp-tt-dir = "PROD/TT/OM/ADMINAUDITTRAIL/"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/OM/RECIEVERKYC/RecieverKYC_*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/OM/RECIEVER_KYC/"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/OM/ADMINAUDITTRAIL/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/OM/ADMINAUDITTRAIL/"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/OM/RECIEVER_KYC/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/OM/RECIEVER_KYC/"
 flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
@@ -44,8 +41,8 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_spark_it_omny_Admin_Audit_Trail.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_spark_it_omny_Reciever_Kyc.hql"
 
-
+"
 
 
