--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -739,18 +739,18 @@ crontasks +=
 // Chargement BASE IDENTIFICATION
 
 crontasks +=
-  {
-    instanceId = "LOAD_IT_CLIENT_SNAPID_DIRECTORY",
-    cron = "0 40 */1 * * ?",
-    configFile = "/PROD/CONF/IDENTIFICATION/load-it-client-snapid-directory.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//  {
+//    instanceId = "LOAD_IT_CLIENT_SNAPID_DIRECTORY",
+//    cron = "0 40 */1 * * ?",
+//    configFile = "/PROD/CONF/IDENTIFICATION/load-it-client-snapid-directory.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "100 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 crontasks +=
   {
